# workflow-vs-agent-fundamentals-br

./: .gitignore  .pre-commit-config.yaml  README.md  dev.env  evaluation_final.ipynb  fetch_news.py  main.py  main_baseline.py  main_workflow.py  manager_evaluation.ipynb  manager_evaluation_v2.ipynb  pyproject.toml  run_experiments.py
data/: terms.csv
results/baseline/: decisions_sample.json  results_sample.json
results/baseline/ALUP11/: 2024-01-02_manager_0.json  2024-02-01_manager_0.json  2024-03-01_manager_0.json  (+21 more)
results/manager/: decisions_sample.json  results_sample.json
results/manager_v2/: decisions_sample.json  monthly_summary_cache.json  results_sample.json
results/manager_v2_sabiazinho/: decisions_sample.json  monthly_summary_cache.json  results_sample.json
results_v2/completo_gpt5mini/: decisions_sample.json  monthly_summary_cache.json  results_sample.json
results_v2/completo_sabiazinho4/: decisions_sample.json  monthly_summary_cache.json  results_sample.json
results_v2/hibrido_fatos_sabiazinho4_gestor_gpt5mini/: decisions_sample.json  monthly_summary_cache.json  results_sample.json
results_v2/sem_fato_relevante_gpt5mini/: decisions_sample.json  results_sample.json
scripts/: evaluation_final.ipynb
src/: settings.py
src/db/: __init__.py  base_query.py
src/experiments/: __init__.py  agent.py  providers.py  workflow.py
src/financial_agents/: financial_analyst.py  financial_manager.py  material_facts_summarizer.py
src/tools/: bovespa_price.py  code_interpreter.py  cvm_base.py  cvm_composition.py  material_facts.py
(+4915 files in other folders)
