[project]
name = "workflow-vs-agent-fundamentals"
version = "0.1.0"
description = "Comparing Agent vs Workflow approaches for fundamental stock analysis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.84.0",
    "dotenv>=0.9.9",
    "finbr>=0.2.3",
    "openai-agents>=0.3.2",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
